--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,6 @@ ports:
 tasks:
   - init: mysql < DDL.sql
 image: gitpod/workspace-mysql
+vscode:
+  extensions:
+    - esbenp.prettier-vscode@6.3.1:88e54755bd35c2295d6cd67df28e757d
